--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -66,7 +66,7 @@
 </ol> <!--Fav Song List Closed-->
 
    <a id="tribute-link" href="https://theproera.com/" target="_blank">For more information, this that Pro Era, in your area link!</a>
-   <img src="https://cdn.shopify.com/s/files/1/0198/0812/files/logo-proera-darker_grande.png?v=1613792442">
+   <img src="https://cdn.shopify.com/s/files/1/0198/0812/files/logo-proera-darker_grande.png?v=1613792442" alt="proEra">
 
 </div>
 
